feat: dto rating